[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["CLOUDX <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.13.1"
pydantic-settings = "^2.6.0"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
pydantic = "^2.11.5"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
